--- a/force-app/main/default/classes/DataloadSwitchController.cls
+++ b/force-app/main/default/classes/DataloadSwitchController.cls
@@ -19,4 +19,19 @@ public inherited sharing class DataloadSwitchController {
         namedCredential = 'ToolingApi';
         return DataloadSwitchService.getAllValidationRules(namedCredential);
     }
+
+    /**
+     * @todo: Not yet finished. Missing parameter validationRuleId.
+     * 
+     * getValidationRule description
+     * @param  namedCredential namedCredential description
+     * @return                 return description
+     */
+    @AuraEnabled(cacheable=true)
+    public static ToolingApiValidationRule getValidationRule(String namedCredential)
+    {
+        namedCredential = 'ToolingApi';
+        //return DataloadSwitchService.getValidationRule(namedCredential);
+        return null;
+    }
 }
